--- a/sites/examples/php.conf
+++ b/sites/examples/php.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
     listen [::]:80;
+    server_name domain.com www.domain.com;
 
     include /etc/nginx/sites/config/letsencrypt.conf;
 
     location / {
-        return 301 https://example.com$request_uri;
+        return 301 https://domain.com$request_uri;
     }
 }
 
@@ -26,6 +27,8 @@ server {
     }
 
     location ~ \.php$ {
+        fastcgi_pass			127.0.0.1:9000;
+        fastcgi_index			index.php;
         include /etc/nginx/sites/config/fastcgi.conf;
     }
 }
