--- a/nginx.conf
+++ b/nginx.conf
@@ -72,51 +72,12 @@ http {
     #+------------------------------------------------------------------------+
     #+ Proxy Configuration
     #+------------------------------------------------------------------------+
-    proxy_ssl_protocols TLSv1.2 TLSv1.3;
-    proxy_buffers 16 32k;
-    proxy_buffer_size 64k;
-    proxy_busy_buffers_size 128k;
-    proxy_cache_bypass $http_pragma $http_authorization;
-    proxy_connect_timeout 59s;
-    proxy_http_version 1.1;
-    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504 http_404;
-    proxy_no_cache $http_pragma $http_authorization;
-    proxy_read_timeout 600;
-    proxy_redirect off;
-    proxy_send_timeout 600;
-    proxy_ignore_headers Cache-Control Expires;
-    proxy_pass_header Set-Cookie;
-    proxy_hide_header X-Powered-By;
-    proxy_set_header Accept-Encoding '';
-    proxy_set_header Cookie $http_cookie;
-    proxy_set_header Host $host;
-    proxy_set_header Proxy ''; # HTTPoxy Mitigation
-    proxy_set_header Referer $http_referer;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Original-Request $request_uri;
-    proxy_set_header X-Proxy-Cache $upstream_cache_status;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_temp_file_write_size 64k;
-    proxy_cache_background_update on;
+    include /etc/nginx/proxy.conf;
 
     #+------------------------------------------------------------------------+
     #+ SSL Configuration
     #+------------------------------------------------------------------------+
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_dhparam /etc/nginx/ssl/dhparam.pem; #openssl dhparam -out /etc/nginx/ssl/dhparam.pem 4096
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_ecdh_curve secp384r1;
-    ssl_session_timeout 10m;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 valid=60s;
-    resolver_timeout 2s;
+    include /etc/nginx/ssl.conf;
 
     #+------------------------------------------------------------------------+
     #+ Site Configuration
