--- a/nginx.conf
+++ b/nginx.conf
@@ -70,6 +70,11 @@ http {
     gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
     #+------------------------------------------------------------------------+
+    #+ CloudFlare Configuration
+    #+------------------------------------------------------------------------+
+    include /etc/nginx/cloudflare.conf;
+
+    #+------------------------------------------------------------------------+
     #+ Proxy Configuration
     #+------------------------------------------------------------------------+
     include /etc/nginx/proxy.conf;
